--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ p { color: #555; }
   <h2>Dear Ilma,</h2>
   <div id="letterText" class="letter"></div>
 
-  <div class="signature">
-    Yours, always ❤️<br>
-    Fahad
-  </div>
+ <div class="signature">
+  Yours, always ❤️<br>
+  stupid 😉
+</div>
 
   <div id="secret" class="secret">
     🌸 Secret unlocked: No matter where life takes us, you will always be my safest place.
